# macroscope

./: .gitignore  .gitmodules  CHANGES.rst  MANIFEST.in  README.rst  mypy.ini  setup.cfg  setup.py  tox.ini
docs/: .gitignore  conf.py  credits.rst  index.rst
docs/documentation/: installation.rst  testing.rst
docs/macroscope/: index.rst
docs/macroscope/data/: index.rst
docs/whatsnew/: 1.0.rst
licenses/: LICENSE.rst
macroscope/: __init__.py
macroscope/data/: __init__.py
macroscope/scripts/: __init__.py
macroscope/tests/: __init__.py
macroscope/utils/: __init__.py
papers_and_presentations/: ABOUT.rst
