[metadata]
name = macroscope
author = CWRU Macroscope Collaboration.
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/cwru-pat/macroscope
description = Constraining Macroscopic Dark Matter Models.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = cwru-pat/macroscope

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
macroscope = data/*

[tool:pytest]
testpaths = "macroscope" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/macroscope/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    macroscope/_astropy_init*
    macroscope/conftest.py
    macroscope/*setup_package*
    macroscope/tests/*
    macroscope/*/tests/*
    macroscope/extern/*
    macroscope/version*
    */macroscope/_astropy_init*
    */macroscope/conftest.py
    */macroscope/*setup_package*
    */macroscope/tests/*
    */macroscope/*/tests/*
    */macroscope/extern/*
    */macroscope/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
